crates/hearthd/src/automations/codegen/snapshots/hearthd__automations__codegen__tests__codegen_symbol_dedup.snap
---
source: crates/hearthd/src/automations/codegen/tests.rs
expression: result
---
Input:
observer {} /true/ { clamp(1, 0, 10); clamp(2, 0, 10); [] }

---
HIR:
Automation: observer
  bb0:
    %0 = const_bool true [Bool]
    branch %0 -> bb1, bb2
  bb1:
    %2 = const_int 1 [Int]
    %3 = const_int 0 [Int]
    %4 = const_int 10 [Int]
    %5 = call clamp(%2, %3, %4) [Int]
    %6 = const_int 2 [Int]
    %7 = const_int 0 [Int]
    %8 = const_int 10 [Int]
    %9 = call clamp(%6, %7, %8) [Int]
    %10 = empty_list [[<error>]]
    return %10
  bb2:
    %1 = empty_list [[Event]]
    return %1

---
LIR:
Constants:
  c0 = bool(true)
  c1 = int(1)
  c2 = int(0)
  c3 = int(10)
  c4 = int(2)
Symbols:
  s0 = "clamp"
Automation: observer
  Registers: 11
  Instructions:
    0000: r0 = load_const c0
    0001: branch r0 -> 0002, 0012
    0002: r2 = load_const c1
    0003: r3 = load_const c2
    0004: r4 = load_const c3
    0005: r5 = call s0(r2, r3, r4)
    0006: r6 = load_const c4
    0007: r7 = load_const c2
    0008: r8 = load_const c3
    0009: r9 = call s0(r6, r7, r8)
    0010: r10 = empty_list
    0011: return r10
    0012: r1 = empty_list
    0013: return r1
