crates/hearthd/src/automations/codegen/snapshots/hearthd__automations__codegen__tests__codegen_unary_ops.snap
---
source: crates/hearthd/src/automations/codegen/tests.rs
expression: result
---
Input:
observer {} /true/ { let x = 10; -x; !true; [] }

---
HIR:
Automation: observer
  bb0:
    %0 = const_bool true [Bool]
    branch %0 -> bb1, bb2
  bb1:
    %2 = const_int 10 [Int]
    %3 = neg %2 [Int]
    %4 = const_bool true [Bool]
    %5 = not %4 [Bool]
    %6 = empty_list [[<error>]]
    return %6
  bb2:
    %1 = empty_list [[Event]]
    return %1

---
LIR:
Constants:
  c0 = bool(true)
  c1 = int(10)
Symbols:
  (none)
Automation: observer
  Registers: 7
  Instructions:
    0000: r0 = load_const c0
    0001: branch r0 -> 0002, 0008
    0002: r2 = load_const c1
    0003: r3 = neg r2
    0004: r4 = load_const c0
    0005: r5 = not r4
    0006: r6 = empty_list
    0007: return r6
    0008: r1 = empty_list
    0009: return r1
